<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Blue">Blue</string>
    <string name="Gold">Gold</string>
    <string name="Green">Green</string>
    <string name="None">None</string>
    <string name="Orange">Orange</string>
    <string name="Pink">Pink</string>
    <string name="Purple">Purple</string>
    <string name="Red">Red</string>
    <string name="Silver">Silver</string>
    <string name="White">White</string>
    <string name="_is_typing_">is typing...</string>
    <string name="_u_email_is_confirmed_u_">Email is Confirmed</string>
    <string name="_u_email_is_unconfirmed_u_">Email is Unconfirmed</string>
    <string name="abm_find_people_disable_caps">DISABLE</string>
    <string name="abm_find_people_done_caps">DONE</string>
    <string name="abm_find_people_has_number">Use your phone contacts to help you find your friends. Your information will be kept private and will not be shared</string>
    <string name="abm_find_people_matches_bar_multiple_matches">We found people you know</string>
    <string name="abm_find_people_matches_bar_no_matches">"Your friends aren't on Kik yet"</string>
    <string name="abm_find_people_matches_bar_one_match">We found someone you know</string>
    <string name="abm_find_people_matches_bar_view_all_caps">VIEW ALL</string>
    <string name="abm_find_people_search_header">Invite Friends to Kik</string>
    <string name="abm_friends_will_also_find_you">Your friends will also be able to find you</string>
    <string name="abm_friends_will_find_you">Your friends will be able to find you</string>
    <string name="abm_friends_wont_find_you">"Your friends won't be able to find you"</string>
    <string name="abm_matching_dialog_text">Upload your address book and contact info to tell you which of your friends already have Kik?</string>
    <string name="abm_opt_in_prompt">Use your phone contacts to find friends already on Kik.</string>
    <string name="abm_options_dialog_confirm_hint">"You will be able to find your friends but your friends won't be able to find you"</string>
    <string name="abm_options_dialog_hint">People who have your phone or email will be able to find you</string>
    <string name="abm_options_dialog_prompt">Allow friends to find me</string>
    <string name="abm_privacy_options_title">Privacy Options</string>
    <string name="about_copyright_text">Copyright © 2018 Kik Interactive Inc All rights reserved</string>
    <string name="about_copyright_text_extended">"Copyright © 2018 Kik Interactive Inc All rights reserved

Kik Interactive Inc
420 Weber St North
Suite I
Waterloo, ON
Canada
N2L 4E7"</string>
    <string name="about_copyright_text_extended_link">"Copyright © 2018 Kik Interactive Inc All rights reserved

Kik Interactive Inc
420 Weber St North
Suite I
Waterloo, ON
Canada
N2L 4E7

http://help.kik.com"</string>
    <string name="about_kik">About Kik</string>
    <string name="about_update_kik">Kik Version</string>
    <string name="account_change_configuration">Configuration</string>
    <string name="action_header">Action</string>
    <string name="activity_conversations_block_chat">Block</string>
    <string name="activity_conversations_chat_info">Info</string>
    <string name="activity_conversations_delete_chat">Delete</string>
    <string name="activity_conversations_leave_chat">Leave</string>
    <string name="activity_conversations_mute_chat">Mute</string>
    <string name="activity_conversations_open_chat">Open</string>
    <string name="activity_conversations_report_chat">Report</string>
    <string name="activity_conversations_start_chatting">Chat</string>
    <string name="activity_conversations_unmute_chat">Unmute</string>
    <string name="activity_new_message_hint">Type a message...</string>
    <string name="activity_viewpicture_load_fail">Failed to load full image. Please try again in a minute</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="add_group_hint">Who do you want to add?</string>
    <string name="add_payment_screen_title">New Card</string>
    <string name="added_you_attribution_message">%1$s started chatting with you</string>
    <string name="adding_to_convo_fail_message">Adding to conversation failed. Please try again</string>
    <string name="address_book_cant_access_contacts">"Your address book settings have been updated but Kik can't access your address book. Please check that Kik has access to Contacts in your device Privacy Settings"</string>
    <string name="address_book_matching_settings_were_updated">Address book matching settings were updated</string>
    <string name="admins">Admins</string>
    <string name="adress_opt_out_warning">Are you sure? You will have to find your friends manually</string>
    <string name="advanced_options">Advanced Options</string>
    <string name="alert_disable_notify_for_new_people">"Are you sure you want to disable notifications for new chats? You won't be notified when new people message you"</string>
    <string name="allow_and_continue">Allow and Continue</string>
    <string name="allow_contacts_access">Please Allow Contacts Access</string>
    <string name="allow_contacts_access_description">"We can't help you find your friends until you give Kik access to your phone contacts"</string>
    <string name="always_allow">Always Allow</string>
    <string name="always_allow_app_to_launch_external">Always allow this app to launch external content</string>
    <string name="always_allow_this_app_to_send_large_messages">Always allow this app to send large messages</string>
    <string name="app_name">Kik</string>
    <string name="application_is_trying_to_launch_x">"This application is trying to launch %1$s 
Do you want to continue?"</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="block_list_description">"List of people you've blocked"</string>
    <string name="card_entry_hint_text">Card number</string>
    <string name="change_chat_bubble_color_summary">Change chat bubble color</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_payment_screen_title">Payment Summary</string>
    <string name="cvv_hint_text">CVV</string>
    <string name="email_confirmation_reminder_descriptive_text">"If you forget your password, we'll use your email to help you get back into Kik. Please check and confirm your email address below"</string>
    <string name="email_confirmation_reminder_title">Is this your email?</string>
    <string name="enter_send_summary">Send messages when you hit enter</string>
    <string name="expiry_hint_text">Expiry (MM/YY)</string>
    <string name="not_now_caps">NOT NOW</string>
    <string name="pay_title">Pay</string>
    <string name="pay_to_title">Pay to</string>
    <string name="pay_total_title">Payment total</string>
    <string name="pay_type_title">Card</string>
    <string name="remember_this_card">Remember this card</string>
    <string name="settings_auto_download_videos">Auto Download Videos</string>
    <string name="settings_autoplay_videos">Auto Play Videos</string>
    <string name="settings_autoplay_videos_blurb">Kik may automatically download and play certain videos that are less than 1MB in size</string>
    <string name="settings_bubble_color">Chat Bubble Color</string>
    <string name="stripe_attribution">Powered by &lt;a href=\"http://stripe.com/terms\">Stripe&lt;/a></string>
    <string name="title_accept">Accept</string>
    <string name="title_block_list">Block List</string>
    <string name="title_chat_settings">Chat Settings</string>
    <string name="title_done">Done</string>
    <string name="title_enter_key_send">Enter Key Send</string>
    <string name="title_help_about_us">Help &amp; About Us</string>
    <string name="title_im_sure">"I'm Sure"</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_your_account_info">Your Account</string>
    <string name="usd">USD</string>
    <string name="wifi_and_cellular">Wi-Fi and Cellular</string>
    <string name="your_code">Your Kik Code</string>
    <string name="title_clear_chat_history">Clear Chat History</string>
    <string name="title_your_web_history">Your Web History</string>
</resources>