<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:kik="http://schemas.android.com/apk/res/kik.android">
    <kik.android.widget.preferences.KikProfilePicPreference android:selectable="false" android:key="kik.profile.picture" />
    <kik.android.widget.preferences.KikBasePreferenceScreen android:title="@string/title_your_account_info" kik:pref_divider="full_top" kik:pref_icon="@drawable/ic_settings_account" kik:preference_screen="@xml/preferences_account" kik:topbar_alt_layout="@layout/kik_back_button" />
    <kik.android.widget.preferences.ShowKikCodePreference android:title="@string/your_code" kik:pref_divider="top" kik:pref_icon="@drawable/ic_settings_kik_code" kik:topbar_alt_layout="@layout/kik_back_button" />H
<kik.android.widget.preferences.WebHistoryPreference android:title="@string/title_your_web_history" kik:pref_divider="top" kik:pref_icon="@drawable/ic_settings_web_history" kik:topbar_alt_layout="@layout/kik_back_button" />
    <kik.android.widget.preferences.KikBasePreferenceScreen android:title="@string/title_notifications" kik:pref_divider="top" kik:pref_icon="@drawable/ic_settings_notifications" kik:preference_screen="@xml/preferences_notification" kik:topbar_alt_layout="@layout/kik_back_button" />
    <kik.android.widget.preferences.KikBasePreferenceScreen android:title="@string/title_chat_settings" kik:pref_divider="top" kik:pref_icon="@drawable/ic_settings_chat" kik:preference_screen="@xml/preferences_chat" kik:topbar_alt_layout="@layout/kik_back_button" />
    <kik.android.widget.preferences.KikBasePreferenceScreen android:title="@string/title_privacy" android:key="privacy_pref_item" kik:pref_divider="top" kik:pref_icon="@drawable/ic_settings_privacy" kik:preference_screen="@xml/preferences_privacy" kik:topbar_alt_layout="@layout/kik_back_button" />
    <kik.android.widget.preferences.KikBasePreferenceScreen android:title="@string/title_help_about_us" kik:pref_divider="full_bottom|top" kik:pref_icon="@drawable/ic_settings_help" kik:preference_screen="@xml/preferences_aboutus" kik:topbar_alt_layout="@layout/kik_back_button" />
</PreferenceScreen>