<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="32.0dip" android:paddingTop="24.0dip" android:paddingRight="32.0dip" android:paddingBottom="16.0dip" android:fadingEdgeLength="0.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <kik.android.widget.RobotoTextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/are_you_sure" style="@style/KikTextView.Dialog.Title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="8.0dip" android:layout_weight="1.0">
        <kik.android.widget.RobotoTextView android:gravity="center_horizontal" android:id="@id/textview_updated_terms_confirm_message" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/KikTextView.Dialog.Message" />
    </ScrollView>
    <Button android:layout_gravity="center_horizontal" android:id="@id/button_updated_terms_accept" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/title_accept" style="@style/KikButton.Hero.Dialog" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/button_updated_terms_im_sure" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_im_sure" style="@style/KikButton.Classic.Dialog" />
</LinearLayout>