<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/rounded_corners_talk_to_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <kik.android.widget.RobotoTextView android:textSize="20.0sp" android:textColor="@color/black" android:id="@id/title" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirm_payment_screen_title" />
    <View android:background="@color/underline_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_below="@id/title" />
    <kik.android.widget.RobotoTextView android:textColor="@color/pay_confirm_title_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:text="@string/pay_to_title" android:layout_below="@id/title" />
    <kik.android.widget.RobotoTextView android:textColor="@color/black" android:id="@id/recipient_name" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:layout_below="@id/title" android:layout_alignParentRight="true" />
    <View android:background="@color/underline_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_below="@id/recipient_name" />
    <kik.android.widget.RobotoTextView android:textColor="@color/pay_confirm_title_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:text="@string/pay_type_title" android:layout_below="@id/recipient_name" />
    <kik.android.widget.RobotoTextView android:textColor="@color/black" android:id="@id/payment_method_type" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:layout_below="@id/recipient_name" android:layout_alignParentRight="true" />
    <View android:background="@color/underline_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_below="@id/payment_method_type" />
    <kik.android.widget.RobotoTextView android:textColor="@color/pay_confirm_title_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:text="@string/pay_total_title" android:layout_below="@id/payment_method_type" />
    <LinearLayout android:id="@id/payment_total_container" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:layout_below="@id/payment_method_type" android:layout_alignParentRight="true">
        <kik.android.widget.RobotoTextView android:textColor="@color/black" android:id="@id/payment_total" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="$5.00" />
        <kik.android.widget.RobotoTextView android:textSize="9.0sp" android:textColor="@color/black" android:id="@id/payment_currency_marker" android:paddingLeft="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/usd" />
    </LinearLayout>
    <View android:background="@color/underline_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_below="@id/payment_total_container" />
    <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/confirm_payment_button" android:background="@xml/pay_button_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/pay_title" android:layout_below="@id/payment_total_container" android:layout_centerHorizontal="true" />
    <com.github.rahatarmanahmed.cpv.CircularProgressView android:id="@id/confirm_progress_spinner" android:layout_alignTop="@id/confirm_payment_button" android:layout_alignBottom="@id/confirm_payment_button" android:layout_centerHorizontal="true" style="@style/CircularProgressView" />
    <LinearLayout android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/confirm_payment_button" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/lock_icon" android:paddingTop="3.0dip" android:paddingRight="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/lock_icon" />
        <TextView android:textColor="@color/stripe_label_color" android:id="@id/stripe_attribution" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stripe_attribution" />
    </LinearLayout>
</RelativeLayout>