<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:kik="http://schemas.android.com/apk/res-auto">
    <Button android:layout_gravity="right" android:id="@id/email_confirmation_not_now" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/not_now_caps" style="@style/KikBorderlessCustomButton" />
    <ScrollView android:id="@id/email_confirmation_scroll" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:id="@id/email_confirmation_container" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:gravity="center" android:layout_gravity="center" android:id="@id/email_confirmation_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:src="@drawable/lock" />
            <kik.android.widget.RobotoTextView android:textSize="22.0sp" android:textColor="@color/title_text_color" android:gravity="center" android:layout_gravity="center" android:id="@id/email_confirmation_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email_confirmation_reminder_title" style="@style/EulaTextViewStyle" />
            <kik.android.widget.RobotoTextView android:textSize="15.0sp" android:textColor="@color/secondary_text_color" android:gravity="center_horizontal" android:id="@id/email_confirmation_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/email_confirmation_reminder_descriptive_text" style="@style/EulaTextViewStyle" />
            <kik.android.widget.RobotoEditText android:textSize="20.0sp" android:gravity="center" android:id="@id/confirmation_reminder_email_field" android:background="@drawable/content_bg_headerline_full" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:inputType="textVisiblePassword|textNoSuggestions" kik:font_type="light" />
            <Button android:id="@id/confirm_email_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/confirm" style="@style/KikCustomBlueButton" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>