<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/preference_list_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/topbar" android:background="@color/appbar_background" android:layout_width="fill_parent" android:layout_height="@dimen/native_topbar_height" android:layout_alignParentTop="true">
        <include android:id="@id/back_button_container" layout="@layout/kik_back_button" />
        <Button android:enabled="false" android:textColor="@android:color/darker_gray" android:layout_gravity="center|right" android:id="@id/next" android:background="?android:selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/title_done" android:textAllCaps="true" />
    </LinearLayout>
    <FrameLayout android:background="@drawable/nav_shadow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/topbar" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/credit_card_number" android:nextFocusDown="@id/credit_card_expiry" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:hint="@string/card_entry_hint_text" android:maxLines="1" android:maxLength="19" android:layout_below="@id/topbar" android:inputType="phone" android:nextFocusForward="@id/credit_card_expiry" app:met_primaryColor="@color/material_underline_focus_color" app:met_floatingLabel="none" app:met_underlineColor="#40000000" />
    <ImageView android:id="@id/scan_button" android:background="@xml/camera_icon_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="16.0dip" android:layout_alignTop="@id/credit_card_number" android:layout_alignParentRight="true" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/credit_card_expiry" android:nextFocusDown="@id/credit_card_cvv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:hint="@string/expiry_hint_text" android:maxLines="1" android:maxLength="5" android:layout_below="@id/credit_card_number" android:inputType="phone" android:nextFocusForward="@id/credit_card_cvv" app:met_primaryColor="@color/material_underline_focus_color" app:met_floatingLabel="none" app:met_underlineColor="#40000000" />
    <com.rengwuxian.materialedittext.MaterialEditText android:id="@id/credit_card_cvv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:hint="@string/cvv_hint_text" android:maxLines="1" android:ems="4" android:maxLength="4" android:layout_below="@id/credit_card_expiry" android:inputType="number" android:imeOptions="actionDone" app:met_primaryColor="@color/material_underline_focus_color" app:met_floatingLabel="none" app:met_underlineColor="#40000000" />
    <TextView android:textSize="18.0sp" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/remember_this_card" android:layout_below="@id/credit_card_cvv" android:layout_alignTop="@id/remember_credit_card_checkbox" android:layout_alignBottom="@id/remember_credit_card_checkbox" />
    <CheckBox android:id="@id/remember_credit_card_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginRight="16.0dip" android:checked="true" android:layout_below="@id/credit_card_cvv" android:layout_alignParentRight="true" />
    <ImageView android:paddingTop="1.0dip" android:paddingRight="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/lock_icon" android:layout_toLeftOf="@id/stripe_attribution" android:layout_alignTop="@id/stripe_attribution" android:layout_alignBottom="@id/stripe_attribution" />
    <TextView android:textColor="@color/stripe_label_color" android:gravity="bottom" android:id="@id/stripe_attribution" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/stripe_attribution" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>